# kaleido-sdk

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  SDK_UNIFICATION_PROPOSAL.md  SECURITY.md  WEBSOCKET_IMPLEMENTATION.md  package-lock.json  package.json  run_my_tests.sh
.github/: dependabot.yml
bindings/python/: Cargo.toml  README.md  generate_bindings.py  pyproject.toml
bindings/python/examples/: 01_hello.py  02_market_data.py  03_get_quote.py  README.md  advanced_market_data.py  atomic_swap.py  error_handling.py  lsps1_channel_info.py  market_data.py  swap_example.py  swap_orders.py  websocket_quotes.py  websocket_simple.py  websocket_simple_test.py  websocket_streaming.py  websocket_test_methods.py
bindings/python/python/kaleidoswap/: __init__.py  client.py  exceptions.py  generated_models.py  rgb_node_models.py  sub_clients.py  utils.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_btc_ln_to_rgb_swap.py  test_client.py  test_extended.py  test_legacy_flow.py  test_sub_clients.py  test_typed_responses.py
bindings/typescript/: .eslintrc.json  .gitignore  Cargo.toml  README.md  jest.config.cjs  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json
bindings/typescript/examples/: 01-basic.html  02-quotes.html  03-react-example.tsx  README.md  atomic-swap.ts  basic.html  market-data.ts  swap_example.ts  websocket-quotes.ts  websocket-streaming.ts
bindings/typescript/src/: error.rs  index.ts  lib.rs  sub-clients.ts
bindings/typescript/tests/: README.md  api.test.ts  client.test.ts  config.test.ts  error-handling.test.ts  integration.html  rln.test.ts  setup.ts  utils.test.ts  web.rs
bindings/typescript/typescript/: .npmignore  README.md  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
bindings/typescript/typescript/examples/: README.md  create-order.ts  error-handling.ts  market-data.ts
bindings/typescript/typescript/pkg/: README.md  kaleidoswap_web.d.ts  kaleidoswap_web.js  kaleidoswap_web_bg.js  kaleidoswap_web_bg.wasm  kaleidoswap_web_bg.wasm.d.ts
bindings/typescript/typescript/pkg-node/: kaleidoswap_sdk.js  kaleidoswap_sdk_bg.wasm  kaleidoswap_sdk_bg.wasm.d.ts
bindings/typescript/typescript/src/: client.ts  errors.ts  index.ts  types.ts
bindings/typescript/typescript/tests/: client.test.ts
crates/kaleidoswap-core/: Cargo.toml  build.rs
crates/kaleidoswap-core/examples/: websocket_quotes.rs  websocket_streaming.rs
crates/kaleidoswap-core/specs/: maker.json
crates/kaleidoswap-core/specs/backup/: maker.json.20260302_111229  rln.yaml.20260218_115546  rln.yaml.20260302_111229
crates/kaleidoswap-core/src/: client.rs  error.rs  http.rs  lib.rs  retry.rs  time.rs  websocket.rs
crates/kaleidoswap-core/src/api/: lsp.rs  market.rs  mod.rs  node.rs  orders.rs  swaps.rs
crates/kaleidoswap-core/src/client/: market.rs  mod.rs  node.rs
crates/kaleidoswap-core/src/models/: kaleidoswap.rs  mod.rs  rgb_node.rs
crates/kaleidoswap-core/src/websocket/: browser.rs  native.rs  trait_def.rs
crates/kaleidoswap-core/tests/: integration_tests.rs
crates/kaleidoswap-core/tests/integration/: websocket_tests.rs
deprecated-typescript/: README.md  (+1 more)
python/: README.md  openapi-config-kaleido.yaml  pyproject.toml  requirements.txt
python-sdk/: README.md  pyproject.toml
python-sdk/examples/: 01_hello.py  02_get_quote.py  03_websocket.py  04_create_swap_order.py  05_quote_logging_demo.py  06_multi_route_streaming.py  07_swap_demo.py  08_advanced_market_data.py  09_error_handling.py  generated_client_example.py
python-sdk/kaleido_sdk/: __init__.py  _http_client.py  _identity.py  _logging.py  _maker_client.py  _rln_client.py  _ws_client.py  client.py  types.py
python-sdk/kaleido_sdk/_generated/: api_types.py  node_types.py
python-sdk/kaleido_sdk/_utils/: __init__.py  precision.py
python-sdk/kaleido_sdk/rln/: __init__.py
python-sdk/kaleidoswap_sdk/: __init__.py  _http_client.py  _logging.py  _maker_client.py  _rln_client.py  _ws_client.py  client.py  errors.py  http_client.py  maker_client.py  rln.py  rln_client.py  types.py  ws_client.py
python-sdk/kaleidoswap_sdk/_generated/: __init__.py  api_types.py  base.py  node_types.py
python-sdk/kaleidoswap_sdk/_generated/maker_client_generated/models/: __init__.py  asset_delivery_status.py  bitcoin_network.py  body.py  channel_details.py  channel_order_response.py  confirm_swap_request.py  create_order_request.py  create_swap_order_request.py  create_swap_order_response.py  fee.py  get_info_response_model.py  get_order_request.py  layer.py  order_history_response.py  order_stats_response.py  pair_quote_response.py  payment_details.py  payment_onchain.py  payment_state.py  payment_status.py  rate_decision_request.py  rate_decision_response.py  receiver_address.py  receiver_address_format.py  retry_delivery_response.py  routes_request.py  swap_leg.py  swap_leg_input.py  swap_node_info_response.py  swap_order_status_request.py  swap_request.py  swap_response.py  swap_route.py  swap_status.py  swap_status_response.py
python-sdk/kaleidoswap_sdk/rln/: __init__.py
python-sdk/kaleidoswap_sdk/utils/: __init__.py  precision.py
python-sdk/tests/: __init__.py  conftest.py  test_client.py  test_errors.py  test_maker_client.py  test_precision.py  test_rln_client.py  test_websocket.py  utils.py
python-sdk/tests/integration/: test_maker_client.py  test_rln_client.py  test_websocket_client.py
python-sdk/tests/unit/: test_client.py  test_errors.py  test_precision.py  test_websocket.py
python/.pytest_cache/v/cache/: nodeids
python/examples/: advanced_market_data.py  atomic_swap.py  error_handling.py  market_data.py  websocket_quotes.py
python/kaleidoswap_sdk/: .generatorignore  __init__.py  client.py  exceptions.py  http.py  http_client.py  models.py  retry.py  websocket.py
python/tests/: __init__.py  conftest.py  mock_server.py  test_advanced_client.py  test_client.py  test_exceptions.py  test_http_client.py  test_retry.py  test_sdk_http.py  test_sdk_websocket.py  test_utilities.py  test_websocket.py
(+329 files in other folders)
