[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaleidoswap-sdk"
version = "0.4.0"
description = "Python SDK for the Kaleidoswap protocol - Trade RGB assets on Lightning Network"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Kaleidoswap", email = "dev@kaleidoswap.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["bitcoin", "lightning", "rgb", "swap", "trading", "sdk"]
dependencies = [
    "httpx>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "datamodel-code-generator>=0.25",
]

[project.urls]
Homepage = "https://kaleidoswap.com"
Documentation = "https://docs.kaleidoswap.com"
Repository = "https://github.com/kaleidoswap/kaleido-sdk"

[tool.hatch.build.targets.wheel]
packages = ["kaleidoswap_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
