[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaleido-sdk"
version = "0.1.3"
description = "Python SDK for the Kaleidoswap protocol - Trade RGB assets on Lightning Network"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Kaleidoswap", email = "dev@kaleidoswap.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["bitcoin", "lightning", "rgb", "swap", "trading", "sdk"]
dependencies = [
    "httpx>=0.27.0",
    "websockets>=12.0",
    "pydantic[email]>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "datamodel-code-generator[ruff]>=0.54.0",
]

[project.urls]
Homepage = "https://kaleidoswap.com"
Documentation = "https://docs.kaleidoswap.com"
Repository = "https://github.com/kaleidoswap/kaleido-sdk"

[tool.hatch.build.targets.wheel]
packages = ["kaleido_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.pyright]
pythonVersion = "3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
