[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kaleidoswap"
version = "0.2.0"
description = "Python SDK for the Kaleidoswap protocol - trade RGB assets on Lightning Network"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["bitcoin", "lightning", "rgb", "swap", "trading", "kaleidoswap"]

[project.urls]
Homepage = "https://kaleidoswap.com"
Repository = "https://github.com/kaleidoswap/kaleido-sdk"
Documentation = "https://docs.kaleidoswap.com/python"

[tool.maturin]

python-source = "python"
module-name = "kaleidoswap.kaleidoswap"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
    "isort>=5.12",
]
