[package]
name = "kaleidoswap-typescript"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "TypeScript/JavaScript bindings for the Kaleidoswap SDK"

[lib]
crate-type = ["cdylib"]

[dependencies]
kaleidoswap-uniffi = { path = "../../crates/kaleidoswap-uniffi" }
napi = { version = "2", features = ["async", "napi6"] }
napi-derive = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
napi-build = "2"
