[package]
name = "kaleidoswap-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "WebAssembly bindings for the Kaleidoswap SDK"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kaleidoswap-core = { path = "../../crates/kaleidoswap-core" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[profile.release]
opt-level = "s"
lto = true

