[package]
name = "kaleidoswap-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core Rust library for the Kaleidoswap SDK"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Async utilities
async-trait.workspace = true
futures.workspace = true

# Utilities
url.workspace = true
log.workspace = true
chrono.workspace = true
reqwest.workspace = true
progenitor-client = "0.11" # Runtime support for generated clients
regress = "0.10" # Used by progenitor for regex validation

# Random for jitter
rand = "0.8"

# For openapi-generator generated code
serde_with = "3"

# Native-only dependencies (Node.js, desktop)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
# reqwest moved to common dependencies
tokio-tungstenite.workspace = true
backoff = { version = "0.4", features = ["tokio"] }
uuid.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",
    "console",
] }
gloo-timers = { version = "0.3", features = ["futures"] }
# Use gloo-net for WASM HTTP requests instead of reqwest (Legacy, migrating to reqwest)
gloo-net = "0.6"
# Minimal tokio for WASM (just sync primitives)
tokio = { version = "1.36", default-features = false, features = ["sync", "macros"] }
# UUID with wasm feature
uuid = { version = "1.7", features = ["v4", "serde", "js"] }

[build-dependencies]
progenitor = "0.11"
openapiv3 = "2.0"
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt", "macros"] } # helper for tests/build if needed? No usually just progenitor.

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-test.workspace = true
wiremock.workspace = true
